--- a/act2.html
+++ b/act2.html
@@ -7,10 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-    <header>
-        <h1></h1>
-    </header>
-    </main>
+
+    <article>
+        <img src="ray.jpg" alt="">
+        <img src="ray.jpg" alt="">
+        <img src="ray.jpg" alt="">
+        <img src="ray.jpg" alt="">
+        <img src="ray.jpg" alt="">
+        <img src="ray.jpg" alt="">
+    </article>
+   
 </body>
 </html>
