--- a/act4.html
+++ b/act4.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-    <header>
-        <h1></h1>
-    </header>
-    </main>
+    <footer>
+        <p>Left Section</p>
+        <p>Center Section</p>
+        <p>Right Section</p>
+    </footer>
 </body>
 </html>
