--- a/act3.html
+++ b/act3.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <main>
-    <header>
-        <h1></h1>
-    </header>
+        <article>
+            <h5></h5>
+            <h5></h5>
+            <h5></h5>
+            <h5></h5>
+            <h5></h5>
+            <h5></h5>
+            <h5></h5>
+            <h5></h5>
+        </article>
     </main>
 </body>
 </html>
